Fix codes page layout, styles, and copy functionality

--- a/ru/crafts.html
+++ b/ru/crafts.html
@@ -124,8 +124,8 @@
             <div class="tips-grid">
                 <!-- Tip 1: Luck Stat & Race Rerolls -->
                 <div class="tip-card">
-                    <h3 style="display: flex; align-items: center; gap: 10px;">
-                        <span style="font-size: 1.5em;">❓</span> Характеристика Удачи и Реролл Расы
+                    <h3 class="tip-header">
+                        <span class="tip-icon">❓</span> Характеристика Удачи и Реролл Расы
                     </h3>
                     <p>
                         Характеристика <strong class="highlight-yellow">Удача</strong> <strong class="highlight-red">НЕ</strong> влияет на шансы реролла расы. Она влияет только на дропы при добыче и лут.
@@ -134,8 +134,8 @@
 
                 <!-- Tip 2: Save Your Runes -->
                 <div class="tip-card">
-                    <h3 style="display: flex; align-items: center; gap: 10px;">
-                        <span style="font-size: 1.5em;">❓</span> Берегите Руны
+                    <h3 class="tip-header">
+                        <span class="tip-icon">❓</span> Берегите Руны
                     </h3>
                     <p>
                         Не используйте руны, пока не получите <strong class="highlight-purple">Мистическую Кирку</strong>. Кирки низкого уровня быстро устаревают.
