--- a/weapons.html
+++ b/weapons.html
@@ -433,9 +433,9 @@
                 </div>
             </div>
 
-            <div class="feature-card" style="margin-top: 2rem;">
+            <div class="feature-card mt-6">
                 <div class="card-body">
-                    <p class="upgrade-path-text" style="text-align: center;">
+                    <p class="upgrade-path-text text-center">
                         <strong>Upgrade Path:</strong> <span class="text-highlight">FORGE WEAPON</span> → <span class="text-highlight">ENHANCE STATS</span> → <span class="text-highlight">SOCKET RUNES</span>
                     </p>
                 </div>
