--- a/weapons/index.html
+++ b/weapons/index.html
@@ -42,91 +42,91 @@
         <div class="features-grid">
             <div class="feature-card">
                 <h3>Boxing Gloves</h3>
-                <img src="boxing_gloves.png" alt="Boxing Gloves" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="boxing_gloves.png" alt="Boxing Gloves" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Chaos</h3>
-                <img src="chaos.png" alt="Chaos" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="chaos.png" alt="Chaos" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Crusader</h3>
-                <img src="crusader.png" alt="Crusader" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="crusader.png" alt="Crusader" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Cutlass</h3>
-                <img src="cutlass.png" alt="Cutlass" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="cutlass.png" alt="Cutlass" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Dagger</h3>
-                <img src="dagger.png" alt="Dagger" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="dagger.png" alt="Dagger" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Double Battle Axe</h3>
-                <img src="double_battle_axe.png" alt="Double Battle Axe" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="double_battle_axe.png" alt="Double Battle Axe" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Dragon Slayer</h3>
-                <img src="dragon_slayer.png" alt="Dragon Slayer" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="dragon_slayer.png" alt="Dragon Slayer" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Falchion</h3>
-                <img src="falchion.png" alt="Falchion" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="falchion.png" alt="Falchion" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Falchion Knife</h3>
-                <img src="falchion_knife.png" alt="Falchion Knife" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="falchion_knife.png" alt="Falchion Knife" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Gladius Dagger</h3>
-                <img src="gladius_dagger.png" alt="Gladius Dagger" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="gladius_dagger.png" alt="Gladius Dagger" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Gladius Sword</h3>
-                <img src="gladius_sword.png" alt="Gladius Sword" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="gladius_sword.png" alt="Gladius Sword" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Great Sword</h3>
-                <img src="great_sword.png" alt="Great Sword" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="great_sword.png" alt="Great Sword" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Hammer</h3>
-                <img src="hammer.png" alt="Hammer" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="hammer.png" alt="Hammer" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Hook</h3>
-                <img src="hook.png" alt="Hook" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="hook.png" alt="Hook" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Ironhand</h3>
-                <img src="ironhand.png" alt="Ironhand" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="ironhand.png" alt="Ironhand" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Long Sword</h3>
-                <img src="long_sword.png" alt="Long Sword" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="long_sword.png" alt="Long Sword" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Rapier</h3>
-                <img src="rapier.png" alt="Rapier" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="rapier.png" alt="Rapier" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Relevator</h3>
-                <img src="relevator.png" alt="Relevator" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="relevator.png" alt="Relevator" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Scythe</h3>
-                <img src="scythe.png" alt="Scythe" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="scythe.png" alt="Scythe" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Skull Crusher</h3>
-                <img src="skull_crusher.png" alt="Skull Crusher" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="skull_crusher.png" alt="Skull Crusher" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Tachi</h3>
-                <img src="tachi.png" alt="Tachi" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="tachi.png" alt="Tachi" class="weapon-preview-img">
             </div>
             <div class="feature-card">
                 <h3>Uchigatana</h3>
-                <img src="uchigatana.png" alt="Uchigatana" style="width: 100%; max-width: 200px; height: auto;">
+                <img src="uchigatana.png" alt="Uchigatana" class="weapon-preview-img">
             </div>
         </div>
     </div>
