--- a/wiki/fungi.html
+++ b/wiki/fungi.html
@@ -125,111 +125,253 @@
             <h3>🛒 Fungi's Shop Inventory</h3>
             <p>Curious about today's <strong>Fungi Shop Stock</strong>? While the shop inventory is <strong>randomized daily</strong>, Fungi only displays a selection of <strong>5 items</strong> from the complete pool below each day. Check the full list to see what you might find!</p>
             
-            <div class="table-overflow">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Item Name</th>
-                            <th>Type</th>
-                            <th>Price</th>
-                            <th>Stock</th>
-                            <th>Stats / Effect</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="weapon-name">Fungi's Potion</td>
-                            <td>Potion</td>
-                            <td class="price">$17,500</td>
-                            <td>6</td>
-                            <td>+20% Mining Speed, +15% Mining DMG, +15% Luck</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Cultist Dagger</td>
-                            <td>Dagger Blueprint</td>
-                            <td class="price">$68,000</td>
-                            <td>1</td>
-                            <td>5.25 Damage, 0.35s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Shark's Fangs</td>
-                            <td>Dagger Blueprint</td>
-                            <td class="price">$80,000</td>
-                            <td>1</td>
-                            <td>3.87 Damage, 0.27s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Curved Dagger</td>
-                            <td>Dagger Blueprint</td>
-                            <td class="price">$68,000</td>
-                            <td>1</td>
-                            <td>4.95 Damage, 0.3s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Hook Blade</td>
-                            <td>Straight Sword Blueprint</td>
-                            <td class="price">$140,000</td>
-                            <td>1</td>
-                            <td>8.25 Damage, 0.44s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Crystallized Broadsword</td>
-                            <td>Straight Sword Blueprint</td>
-                            <td class="price">$290,000</td>
-                            <td>1</td>
-                            <td>9.975 Damage, 0.62s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Dark Knight's Gauntlets</td>
-                            <td>Gauntlet Blueprint</td>
-                            <td class="price">$200,000</td>
-                            <td>1</td>
-                            <td>10 Damage, 0.47s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Straight Edge Katana</td>
-                            <td>Katana Blueprint</td>
-                            <td class="price">$230,000</td>
-                            <td>1</td>
-                            <td>9.35 Damage, 0.6s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Ornate Short Axe</td>
-                            <td>Axe Blueprint</td>
-                            <td class="price">$205,000</td>
-                            <td>1</td>
-                            <td>8.4 Damage, 0.48s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Anchored Greatsword</td>
-                            <td>Great Sword Blueprint</td>
-                            <td class="price">$440,000</td>
-                            <td>1</td>
-                            <td>13.8 Damage, 0.91s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Dark Knight's Greatsword</td>
-                            <td>Great Sword Blueprint</td>
-                            <td class="price">$485,000</td>
-                            <td>1</td>
-                            <td>15 Damage, 1.11s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Colossal Terrorblade</td>
-                            <td>Colossal Sword Blueprint</td>
-                            <td class="price">$470,000</td>
-                            <td>1</td>
-                            <td>22 Damage, 1.02s Speed</td>
-                        </tr>
-                        <tr>
-                            <td class="weapon-name">Colossal Gemblade</td>
-                            <td>Colossal Sword Blueprint</td>
-                            <td class="price">$500,000</td>
-                            <td>1</td>
-                            <td>23 Damage, 1.12s Speed</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="features-grid shop-grid">
+                <!-- Fungi's Potion -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Fungi's Potion</div>
+                        <span class="item-type">Potion</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$17,500</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">6</span>
+                        </div>
+                        <div class="shop-stats">
+                            +20% Mining Speed, +15% Mining DMG, +15% Luck
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Cultist Dagger -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Cultist Dagger</div>
+                        <span class="item-type">Dagger Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$68,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            5.25 Damage, 0.35s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Shark's Fangs -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Shark's Fangs</div>
+                        <span class="item-type">Dagger Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$80,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            3.87 Damage, 0.27s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Curved Dagger -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Curved Dagger</div>
+                        <span class="item-type">Dagger Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$68,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            4.95 Damage, 0.3s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Hook Blade -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Hook Blade</div>
+                        <span class="item-type">Straight Sword Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$140,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            8.25 Damage, 0.44s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Crystallized Broadsword -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Crystallized Broadsword</div>
+                        <span class="item-type">Straight Sword Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$290,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            9.975 Damage, 0.62s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Dark Knight's Gauntlets -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Dark Knight's Gauntlets</div>
+                        <span class="item-type">Gauntlet Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$200,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            10 Damage, 0.47s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Straight Edge Katana -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Straight Edge Katana</div>
+                        <span class="item-type">Katana Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$230,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            9.35 Damage, 0.6s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Ornate Short Axe -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Ornate Short Axe</div>
+                        <span class="item-type">Axe Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$205,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            8.4 Damage, 0.48s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Anchored Greatsword -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Anchored Greatsword</div>
+                        <span class="item-type">Great Sword Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$440,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            13.8 Damage, 0.91s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Dark Knight's Greatsword -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Dark Knight's Greatsword</div>
+                        <span class="item-type">Great Sword Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$485,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            15 Damage, 1.11s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Colossal Terrorblade -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Colossal Terrorblade</div>
+                        <span class="item-type">Colossal Sword Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$470,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            22 Damage, 1.02s Speed
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Colossal Gemblade -->
+                <div class="feature-card shop-item">
+                    <div class="shop-header">
+                        <div class="item-name">Colossal Gemblade</div>
+                        <span class="item-type">Colossal Sword Blueprint</span>
+                    </div>
+                    <div class="shop-details">
+                        <div class="shop-row">
+                            <span class="label">Price:</span> <span class="value price">$500,000</span>
+                        </div>
+                        <div class="shop-row">
+                            <span class="label">Stock:</span> <span class="value">1</span>
+                        </div>
+                        <div class="shop-stats">
+                            23 Damage, 1.12s Speed
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
